Bug 143745 - I18N: not using UTF-8 in I18N_NOOP calls
Summary: I18N: not using UTF-8 in I18N_NOOP calls
Status: RESOLVED FIXED
Alias: None
Product: kvoctrain
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Other
: NOR normal
Target Milestone: ---
Assignee: Peter Hedlund
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-04-02 18:28 UTC by Nicolas Goutte
Modified: 2007-04-04 23:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Goutte 2007-04-02 18:28:36 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                I Don't Know

In the file trunk/KDE/kdeedu/kvoctrain/kvoctrain/commondialogs/languageoptions.cpp seems not to use UTF-8 in the I18N_NOOP calls for the languages names.

However it should be for two reasons:
- source files in KDE should be written in UTF-8.
- the message extraction done by Scripty expect translatable strings to be UTF-8.

Have a nice day!
Comment 1 Peter Hedlund 2007-04-04 23:43:27 UTC
SVN commit 650574 by hedlund:

Better use of internal KDE data and functions for retrieval of language information.

BUG:143745
BUG:143746

 M  +65 -263   languageoptions.cpp  
 M  +9 -11     languageoptions.h  
 M  +57 -36    languageoptionsbase.ui