Better use of internal KDE data and functions for retrieval of language information.

BUG:143745
BUG:143746

svn path=/trunk/KDE/kdeedu/kvoctrain/; revision=650574